feat: add styles and keyboard generator

--- a/css/scss/0-abstracts/_variables.scss
+++ b/css/scss/0-abstracts/_variables.scss
@@ -3,3 +3,5 @@ $color-white:#ffffff;
 $color-shadow:#00000080;
 $color-gradient-one:#BE93C5;
 $color-gradient-two:#7BC6CC;
+$color-key-hover:#f9f9f9;
+$color-key-active:rgba(123, 199, 204, 0.308);
