--- a/css/scss/0-abstracts/_mixins.scss
+++ b/css/scss/0-abstracts/_mixins.scss
@@ -17,8 +17,8 @@
   }
 
   @mixin transition($property:all, $time:0.5s) {
-    transition: $property $time ease;
-      -moz-transition: $property $time ease;
-      -webkit-transition: $property $time ease;
+    transition: $property $time ease-in-out;
+      -moz-transition: $property $time ease-in-out;
+      -webkit-transition: $property $time ease-in-out;
   }
   
