--- a/css/scss/1-base/_keyboard.scss
+++ b/css/scss/1-base/_keyboard.scss
@@ -1,4 +1,99 @@
 .keyboard {
-    max-width: 850px;
+    width:100%;
+    height: 300px;
     margin: 0 auto;
+
+    display:flex;
+    flex-wrap:wrap;
+
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+
+    box-sizing: border-box;
+    overflow: hidden;
+    touch-action: manipulation;
+
+    background-color: #ececec;
+    padding: 5px;
+    border-radius: 10px;
+    margin-top: 10px;
+
+   box-shadow:0px 5px 8px 0px #0006;;
 }
+
+.keyboard__key {
+    border-width: 0;
+    outline: 0;
+    font-size: 1.7rem;
+
+    display: inline-block;
+    flex-grow: 1;
+
+    box-shadow: 0 0 3px -1px rgba(0, 0, 0, .3);
+    width: 65px;
+    border-radius: 5px;
+    box-sizing: border-box;
+    padding: 5px;
+    background-color: #fff;
+    border-bottom: 1px solid #b5b5b5;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    -webkit-tap-highlight-color:transparent;
+
+    @include transition();
+
+    &:hover {
+        background-color: $color-key-hover;
+        box-shadow: inset 0 0 0px 3px $color-white;
+    }
+
+    &:active {
+        background-color:$color-key-active;
+    }
+  }
+
+span {
+    font-size: 1.2rem;
+    padding: 3px;
+    color: rgba(0, 0, 0, 0.5);
+    pointer-events: none
+}
+
+.keyboard__key.selectedButton {
+    background: #05194660;
+    color: #fff
+  }
+
+  .keyboard__key.activeButton {
+    background: #efefef
+  }
+
+.space {
+    flex-grow: 10;
+}
+ .caps {
+     width:95px;
+ }
+
+ .enter {
+     width:100px;
+ }
+ 
+ .win {
+    background-image: url(../assets/windows.png);
+    background-repeat: no-repeat;
+    background-size: 25px;
+    background-position: center;
+ }
+
+ .shift, .ctrl, .alt, .del {
+     font-size: 1.4rem;
+ }
+.uppercase {
+    text-transform: uppercase;
+  }
+  
