--- a/css/scss/1-base/_layout.scss
+++ b/css/scss/1-base/_layout.scss
@@ -16,7 +16,7 @@ body {
   flex-direction: column;
   justify-content: center;
 
-  max-width: 960px;
+  width: 960px;
   margin: auto;
   }
 
@@ -30,3 +30,4 @@ h1 {
     color: $color-white;
   }
 }
+
