--- a/css/style.css
+++ b/css/style.css
@@ -22,15 +22,27 @@ h1 {
   font-size: 4rem;
   margin: 3rem 0rem;
   color: #ffffff80;
-  transition: color 0.5s ease;
-  -moz-transition: color 0.5s ease;
-  -webkit-transition: color 0.5s ease;
+  transition: color 0.5s ease-in-out;
+  -moz-transition: color 0.5s ease-in-out;
+  -webkit-transition: color 0.5s ease-in-out;
 }
 h1:hover {
   color: #ffffff;
 }
 
-input {
+.info {
+  margin: 20px 0;
+  background: rgba(190, 147, 197, 0.45);
+  border-radius: 10px;
+  padding-left: 10px;
+}
+.info p {
+  font-size: 2rem;
+  color: #ffffff;
+  line-height: 1rem;
+}
+
+textarea {
   width: 100%;
   height: 200px;
   padding: 2rem;
@@ -42,7 +54,7 @@ input {
   -moz-border-radius: 10px;
   -webkit-border-radius: 10px;
 }
-input:focus {
+textarea:focus {
   outline: none;
   -webkit-box-shadow: inset 0px 0px 5px #00000080;
   -moz-box-shadow: inset 0px 0px 5px #00000080;
@@ -76,7 +88,8 @@ input:focus {
   display: inline-block;
   flex-grow: 1;
   box-shadow: 0 0 3px -1px rgba(0, 0, 0, 0.3);
-  width: 65px;
+  width: 60px;
+  margin: 2px;
   border-radius: 5px;
   box-sizing: border-box;
   padding: 5px;
@@ -87,23 +100,16 @@ input:focus {
   align-items: center;
   justify-content: center;
   -webkit-tap-highlight-color: transparent;
-  transition: all 0.5s ease;
-  -moz-transition: all 0.5s ease;
-  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease-in-out;
+  -moz-transition: all 0.5s ease-in-out;
+  -webkit-transition: all 0.5s ease-in-out;
 }
 .keyboard__key:hover {
   background-color: #f9f9f9;
   box-shadow: inset 0 0 0px 3px #ffffff;
 }
 .keyboard__key:active {
-  background-color: rgba(123, 199, 204, 0.308);
-}
-
-span {
-  font-size: 1.2rem;
-  padding: 3px;
-  color: rgba(0, 0, 0, 0.5);
-  pointer-events: none;
+  background-color: rgba(123, 199, 204, 0.3);
 }
 
 .keyboard__key.selectedButton {
@@ -134,12 +140,37 @@ span {
   background-position: center;
 }
 
-.shift, .ctrl, .alt, .del {
+.alt {
+  width: 45px;
+}
+
+.backspace {
+  width: 90px;
+}
+
+.shift, .ctrl, .alt {
   font-size: 1.4rem;
 }
 
-.uppercase {
-  text-transform: uppercase;
+.tab {
+  width: 90px;
+}
+
+.shift, .ctrl, .alt, .enter, .caps, .win, .backspace, .tab, .arrow {
+  background-color: #f2f2f2;
+}
+
+.arrow {
+  width: 60px;
+  flex-grow: 0;
+}
+
+.arrow:nth-last-child(1) {
+  margin-right: 5px;
+}
+
+.ctrl:nth-of-type(2n - 1) {
+  flex-grow: 0;
 }
 
 /*# sourceMappingURL=style.css.map */
