--- a/css/scss/1-base/_keyboard.scss
+++ b/css/scss/1-base/_keyboard.scss
@@ -45,18 +45,19 @@
     justify-content: center;
     -webkit-tap-highlight-color:transparent;
 
-    @include transition();
+    @include transition(all,0.1s);
 
     &:hover {
-        background-color: $color-key-hover;
-        box-shadow: inset 0 0 0px 3px $color-white;
+        background-color: $color-key-hover;  
     }
-
     &:active {
-        background-color:$color-key-active;
+       background-color:$color-key-active;
     }
   }
 
+  .key-pressed {
+      background-color:aqua;
+  }
 
 .keyboard__key.selectedButton {
     background: #05194660;
