--- a/css/style.css
+++ b/css/style.css
@@ -100,16 +100,19 @@ textarea:focus {
   align-items: center;
   justify-content: center;
   -webkit-tap-highlight-color: transparent;
-  transition: all 0.5s ease-in-out;
-  -moz-transition: all 0.5s ease-in-out;
-  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.1s ease-in-out;
+  -moz-transition: all 0.1s ease-in-out;
+  -webkit-transition: all 0.1s ease-in-out;
 }
 .keyboard__key:hover {
   background-color: #f9f9f9;
-  box-shadow: inset 0 0 0px 3px #ffffff;
 }
 .keyboard__key:active {
   background-color: rgba(123, 199, 204, 0.3);
+}
+
+.key-pressed {
+  background-color: aqua;
 }
 
 .keyboard__key.selectedButton {
