--- a/css/scss/1-base/_keyboard.scss
+++ b/css/scss/1-base/_keyboard.scss
@@ -55,8 +55,8 @@
     }
   }
 
-  .key-pressed {
-      background-color:aqua;
+.key-pressed {
+    background-color:$color-key-active;
   }
 
 .keyboard__key.selectedButton {
@@ -102,7 +102,8 @@
  }
 
  .shift, .ctrl, .alt, .enter, .caps, .win, .backspace, .tab, .arrow {
-    background-color: $color-function-keys;
+    //background-color: $color-function-keys;
+    font-size: 1.4rem;
 }
 
 .arrow {
