fix: added clear button, backspace behaviour selected text and minor fixes

--- a/css/style.css
+++ b/css/style.css
@@ -176,4 +176,23 @@ textarea:focus {
   flex-grow: 0;
 }
 
-/*# sourceMappingURL=style.css.map */
+.clear-button{
+  width: 130px;
+  align-self: flex-end;
+  position: relative;
+  top: -61px;
+  right: 4px;
+  border-radius: 5px;
+  outline: none;
+  border: none;
+  padding: 6px;
+  font-size: 1.7rem;
+  color: #ffffff;
+  background-color: #7BC6CC80;
+  transition: all 0.5s ease-in-out;
+  cursor: pointer;
+}
+
+.clear-button:active{
+  background-color: #7BC6CC;
+}
