--- a/css/style.scss
+++ b/css/style.scss
@@ -4,37 +4,24 @@ html {
 
 body {
   background: #BE93C5;
-  background: -webkit-gradient(linear, left top, right top, from(#7BC6CC), to(#79e234));
+  background: -webkit-linear-gradient(to right, #7BC6CC, #8dcc19);
   background: linear-gradient(to right, #7BC6CC, #79e234);
   font-family: "IBM Plex Sans", Verdana sans-serif;
   font-size: 10px;
 }
 
 .container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-direction: column;
+  justify-content: center;
   width: 960px;
   margin: auto;
 }
 
 .header {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
 }
 
 h1 {
@@ -45,7 +32,6 @@ h1 {
   -moz-transition: color 0.5s ease-in-out;
   -webkit-transition: color 0.5s ease-in-out;
 }
-
 h1:hover {
   color: #ffffff;
 }
@@ -56,7 +42,6 @@ h1:hover {
   border-radius: 10px;
   padding-left: 10px;
 }
-
 .info p {
   font-size: 2rem;
   color: #ffffff;
@@ -69,17 +54,16 @@ textarea {
   padding: 2rem;
   font-size: 2rem;
   border: 1px solid aliceblue;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   display: block;
   border-radius: 10px;
   -moz-border-radius: 10px;
   -webkit-border-radius: 10px;
 }
-
 textarea:focus {
   outline: none;
   -webkit-box-shadow: inset 0px 0px 5px #00000080;
+  -moz-box-shadow: inset 0px 0px 5px #00000080;
   box-shadow: inset 0px 0px 5px #00000080;
 }
 
@@ -87,26 +71,20 @@ textarea:focus {
   width: 100%;
   height: 300px;
   margin: 0 auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   overflow: hidden;
-  -ms-touch-action: manipulation;
-      touch-action: manipulation;
+  touch-action: manipulation;
   background-color: #ececec;
   padding: 5px;
   border-radius: 10px;
   margin-top: 10px;
-  -webkit-box-shadow: 0px 5px 8px 0px #0006;
-          box-shadow: 0px 5px 8px 0px #0006;
+  box-shadow: 0px 5px 8px 0px #0006;
 }
 
 .keyboard__key {
@@ -114,39 +92,27 @@ textarea:focus {
   outline: 0;
   font-size: 1.7rem;
   display: inline-block;
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
-  -webkit-box-shadow: 0 0 3px -1px rgba(0, 0, 0, 0.3);
-          box-shadow: 0 0 3px -1px rgba(0, 0, 0, 0.3);
+  flex-grow: 1;
+  box-shadow: 0 0 3px -1px rgba(0, 0, 0, 0.3);
   width: 60px;
   margin: 2px;
   border-radius: 5px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   padding: 5px;
   background-color: #fff;
   border-bottom: 1px solid #b5b5b5;
   cursor: pointer;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   -webkit-tap-highlight-color: transparent;
   transition: all 0.1s ease-in-out;
   -moz-transition: all 0.1s ease-in-out;
   -webkit-transition: all 0.1s ease-in-out;
 }
-
 .keyboard__key:hover {
   background-color: #f9f9f9;
 }
-
 .keyboard__key:active {
   background-color: rgba(123, 199, 204, 0.3);
 }
@@ -165,9 +131,7 @@ textarea:focus {
 }
 
 .space {
-  -webkit-box-flex: 10;
-      -ms-flex-positive: 10;
-          flex-grow: 10;
+  flex-grow: 10;
 }
 
 .caps {
@@ -207,9 +171,7 @@ textarea:focus {
 
 .arrow {
   width: 60px;
-  -webkit-box-flex: 0;
-      -ms-flex-positive: 0;
-          flex-grow: 0;
+  flex-grow: 0;
 }
 
 .arrow:nth-last-child(1) {
@@ -217,15 +179,12 @@ textarea:focus {
 }
 
 .ctrl:nth-of-type(2n - 1) {
-  -webkit-box-flex: 0;
-      -ms-flex-positive: 0;
-          flex-grow: 0;
+  flex-grow: 0;
 }
 
-.clear-button {
+.clear-button{
   width: 130px;
-  -ms-flex-item-align: end;
-      align-self: flex-end;
+  align-self: flex-end;
   position: relative;
   top: -61px;
   right: 4px;
@@ -236,12 +195,10 @@ textarea:focus {
   font-size: 1.7rem;
   color: #ffffff;
   background-color: #7BC6CC80;
-  -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
   cursor: pointer;
 }
 
-.clear-button:active {
+.clear-button:active{
   background-color: #7BC6CC;
 }
-/*# sourceMappingURL=style.css.map */
