--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,8 +4,8 @@ html {
 
 body {
   background: #BE93C5;
-  background: -webkit-linear-gradient(to right, #7BC6CC, #BE93C5);
-  background: linear-gradient(to right, #7BC6CC, #BE93C5);
+  background: -webkit-linear-gradient(to right, #7BC6CC, #8dcc19);
+  background: linear-gradient(to right, #7BC6CC, #79e234);
   font-family: "IBM Plex Sans", Verdana sans-serif;
   font-size: 10px;
 }
@@ -16,6 +16,12 @@ body {
   justify-content: center;
   width: 960px;
   margin: auto;
+}
+
+.header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 h1 {
@@ -137,7 +143,7 @@ textarea:focus {
 }
 
 .win {
-  background-image: url(../assets/windows.png);
+  background-image: url(../../public/windows.png);
   background-repeat: no-repeat;
   background-size: 25px;
   background-position: center;
