--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -31,6 +31,9 @@ h1 {
   transition: color 0.5s ease-in-out;
   -moz-transition: color 0.5s ease-in-out;
   -webkit-transition: color 0.5s ease-in-out;
+
+  cursor: -webkit-grab;
+  flex-grow: 2;
 }
 h1:hover {
   color: #ffffff;
@@ -38,11 +41,9 @@ h1:hover {
 
 .info {
   margin: 20px 0;
-  background: rgba(190, 147, 197, 0.45);
   border-radius: 10px;
   padding-left: 10px;
-}
-.info p {
+
   font-size: 2rem;
   color: #ffffff;
   line-height: 1rem;
@@ -117,6 +118,16 @@ textarea:focus {
     transition: all 0.1s ease-in-out;
     -moz-transition: all 0.1s ease-in-out;
     -webkit-transition: all 0.1s ease-in-out;
+
+    &.shifted .key__superscript {
+        transform: translate(0, 1.8rem);
+        color: black;
+    }
+
+    &.shifted .key__value{
+      transform: translate(0, -1.8rem);
+      color: rgba(128, 128, 128, 0.57);
+  }
 }
 .keyboard__key:hover {
   background-color: #f9f9f9;
@@ -136,6 +147,18 @@ textarea:focus {
 
 .keyboard__key.activeButton {
   background: #efefef;
+}
+
+.key__superscript {
+  color: rgba(128, 128, 128, 0.57);
+  transform: translate(0, 0);
+  transition: all ease 0.5s;
+  display: inline-block;
+}
+
+.key__value {
+  transform: translate(0, 0);
+  transition: all ease 0.5s;
 }
 
 [type=modifier] {
@@ -162,26 +185,73 @@ textarea:focus {
 .enter { grid-area: enter; }
 .shiftleft { grid-area: shiftleft; }
 .shiftright { grid-area: shiftright; }
-.navigation { grid-area: navigation; }
 .space { grid-area: space; }
 
-.clear-button{
-  width: 130px;
-  align-self: flex-end;
-  position: relative;
-  top: -61px;
-  right: 4px;
+.clear{
   border-radius: 5px;
   outline: none;
   border: none;
-  padding: 6px;
-  font-size: 1.7rem;
-  color: #ffffff;
-  background-color: #7BC6CC80;
+  font-size: 1.2rem;
+  color: #000000;
   transition: all 0.5s ease-in-out;
   cursor: pointer;
+  min-width: 80px;
+  background: rgb(233, 233, 233);
+  margin-left: 15px;
 }
 
-.clear-button:active{
+.clear:active{
   background-color: #7BC6CC;
+}
+
+.keyboard__nav {
+  grid-area: navigation;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 0px 0px;
+}
+.ArrowUp { 
+  grid-area: 1 / 2 / 2 / 3; 
+  & span {
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 0 3.75px 7.5px 3.75px;
+    border-color: transparent transparent #000000 transparent;
+    line-height: 0px;
+  }
+}
+.ArrowDown { 
+  grid-area: 2 / 2 / 3 / 3; 
+  & span {
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 7.5px 3.75px 0 3.75px;
+    border-color: #000000 transparent transparent transparent;
+    line-height: 0px;
+  }
+}
+.ArrowRight { 
+  grid-area: 2 / 3 / 3 / 4; 
+  & span {
+    width: 0;
+height: 0;
+border-style: solid;
+border-width: 3.75px 0 3.75px 7.5px;
+border-color: transparent transparent transparent #000000;
+line-height: 0px;
+  }
+}
+.ArrowLeft { 
+  grid-area: 2 / 1 / 3 / 2; 
+  & span {
+    width: 0;
+height: 0;
+border-style: solid;
+border-width: 3.75px 7.5px 3.75px 0;
+border-color: transparent #000000 transparent transparent;
+line-height: 0px;
+  }
 }
