--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,11 +3,35 @@ html {
 }
 
 body {
-  background: #be93c5;
-  background: -webkit-linear-gradient(to right, #7bc6cc, #8dcc19);
-  background: linear-gradient(to right, #7bc6cc, #79e234);
-  font-family: 'IBM Plex Sans', Verdana sans-serif;
+  background: #1f1f1f;
+  font-family: 'Roboto', Verdana sans-serif;
   font-size: 10px;
+  transition: all 1s ease;
+
+  &.morning {
+    background: #355c7d;
+    background: linear-gradient(to top, #c06c84, #6c5b7b, #355c7d);
+  }
+
+  &.noon {
+    background: #c6ffdd;
+    background: linear-gradient(to bottom, #c6ffdd, #fbd786, #f7797d);
+  }
+
+  &.afternoon {
+    background: #fdc830;
+    background: linear-gradient(273deg, #fcac30, #bc4077);
+  }
+
+  &.evening {
+    background: #159957;
+    background: linear-gradient(to bottom, #159957, #155799);
+  }
+
+  &.night {
+    background: #0f2027;
+    background: linear-gradient(to top, #2c5364, #203a43, #0f2027);
+  }
 }
 
 .container {
@@ -84,9 +108,6 @@ textarea:focus {
     'shiftleft shiftleft shiftleft . . . . . . . . . . shiftright shiftright'
     '. . . space space space space space space space . . navigation navigation navigation';
 
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
   user-select: none;
 
   box-sizing: border-box;
@@ -207,16 +228,16 @@ textarea:focus {
 }
 
 .clear {
-  border-radius: 5px;
+  border-radius: 0.5rem;
   outline: none;
   border: none;
   font-size: 1.2rem;
-  color: #000000;
   transition: all 0.5s ease-in-out;
   cursor: pointer;
   min-width: 80px;
-  background: rgb(233, 233, 233);
+  background: #e9e9e9;
   margin-left: 15px;
+  height: 3rem;
 }
 
 .clear:active {
@@ -276,48 +297,41 @@ textarea:focus {
 }
 
 select {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  -ms-appearance: none;
-  appearance: none;
-  outline: 0;
-  box-shadow: none;
-  border: 0 !important;
-  background: #5c6664;
-  background-image: none;
+  border: none;
   flex: 1;
   padding: 0 0.5em;
-  color: #fff;
   cursor: pointer;
   font-size: 1em;
-  font-family: 'Open Sans', sans-serif;
+
+  &::-ms-expand {
+    display: none;
+  }
 }
-select::-ms-expand {
-  display: none;
-}
+
 .select {
   position: relative;
   display: flex;
-  width: 20em;
+  width: 14em;
   height: 3em;
   line-height: 3;
-  background: #5c6664;
   overflow: hidden;
-  border-radius: 0.25em;
-}
-.select::after {
-  content: '\25BC';
-  position: absolute;
-  top: 0;
-  right: 0;
-  padding: 0 1em;
-  background: #2b2e2e;
-  cursor: pointer;
-  pointer-events: none;
-  transition: 0.25s all ease;
-}
-.select:hover::after {
-  color: #23b499;
+  border-radius: 0.5rem;
+
+  &::after {
+    content: '\25BC';
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 0 1em;
+    background: #c9c9c9;
+    cursor: pointer;
+    pointer-events: none;
+    transition: 0.25s all ease;
+  }
+
+  &:hover::after {
+    color: #1a1a1a;
+  }
 }
 
 .switch input {
@@ -325,28 +339,31 @@ select::-ms-expand {
   opacity: 0;
 }
 
-/**
- * 1. Adjust this to size
- */
-
 .switch {
   display: inline-block;
-  font-size: 20px; /* 1 */
-  height: 1em;
-  width: 2em;
+  font-size: 1.3rem;
+  height: 2em;
+  width: 3.5em;
   background: #bdb9a6;
   border-radius: 1em;
-}
+  margin: 0 2rem;
 
-.switch div {
-  height: 1em;
-  width: 1em;
-  border-radius: 1em;
-  background: #fff;
-  box-shadow: 0 0.1em 0.3em rgba(0, 0, 0, 0.3);
-  -webkit-transition: all 300ms;
-  -moz-transition: all 300ms;
-  transition: all 300ms;
+  & div {
+    height: 2.5rem;
+    width: 2.5rem;
+    border-radius: 1em;
+    background: #fff;
+    box-shadow: 0 0.1em 0.3em rgba(0, 0, 0, 0.3);
+    transition: all 0.3s;
+  }
+
+  & span {
+    font-size: 1rem;
+    text-align: center;
+    color: white;
+    display: block;
+    margin-top: 0.5rem;
+  }
 }
 
 .switch input:checked + div {
