--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -22,12 +22,12 @@ body {
 
   &.afternoon {
     background: #fdc830;
-    background: linear-gradient(273deg, #fcac30, #bc4077);
+    background: linear-gradient(270deg, #fcac30, #bc4077);
   }
 
   &.evening {
     background: #159957;
-    background: linear-gradient(to bottom, #159957, #155799);
+    background: linear-gradient(270deg, #159957, #155799);
   }
 
   &.night {
@@ -48,6 +48,39 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.feature-panel {
+  width: 40px;
+  height: 40px;
+  position: fixed;
+  z-index: 10;
+  top: -0.5rem;
+  left: 20px;
+  border-radius: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: #282828;
+  border-right: none;
+  transition: all 0.5s ease;
+  cursor: pointer;
+
+  &.visible {
+    height: 500px;
+    width: 420px;
+
+    & p {
+      opacity: 0;
+      visibility: hidden;
+    }
+  }
+
+  & p {
+    color: white;
+    font-size: 18px;
+  }
 }
 
 h1 {
@@ -100,15 +133,8 @@ textarea:focus {
   grid-template-columns: repeat(15, 1fr);
   grid-template-rows: repeat(5, 1fr);
   gap: 0px 0px;
-  grid-template-areas:
-    '. . . . . . . . . . . . . backspace backspace'
-    'tab tab . . . . . . . . . . . . .'
-    'capslock capslock . . . . . . . . . . . enter enter'
-    'shiftleft shiftleft shiftleft . . . . . . . . . . shiftright shiftright'
-    '. . . space space space space space space space . . navigation navigation navigation';
 
   user-select: none;
-
   box-sizing: border-box;
   overflow: hidden;
   touch-action: manipulation;
@@ -117,6 +143,19 @@ textarea:focus {
   border-radius: 10px;
   margin-top: 10px;
   box-shadow: 0px 5px 8px 0px #0006;
+
+  &.windows {
+    grid-template-areas: '. . . . . . . . . . . . . backspace backspace' 'tab tab . . . . . . . . . . . . enter' 'capslock capslock . . . . . . . . . . . . enter' 'shiftleft shiftleft .shiftkeft . . . . . . . . . shiftright shiftright' '. . . space space space space space space space . . navigation navigation navigation';
+  }
+
+  &.ios {
+    grid-template-areas:
+      '. . . . . . . . . . . . . backspace backspace'
+      'tab tab . . . . . . . . . . . . .'
+      'capslock capslock . . . . . . . . . . . enter enter'
+      'shiftleft shiftleft shiftleft . . . . . . . . . . shiftright shiftright'
+      '. . . space space space space space space space . . navigation navigation navigation';
+  }
 }
 
 .keyboard__key {
