feat: adds save file button

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 
 html {
   font-size: 62.5%;
+}
+
+.material-icons {
+  font-family: 'Material Icons';
+  font-size: 2rem;
+  line-height: 2.5rem;
+  display: inline-block;
+  border-radius: 0.5rem;
+  border: none;
+  background: white;
+  cursor: pointer;
 }
 
 body {
@@ -198,6 +210,7 @@ textarea:focus {
 
 .keyboard__key {
   min-width: 55px;
+  margin: 2px;
   flex-direction: column-reverse;
   border-width: 0;
   outline: 0;
