--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,11 +14,12 @@ html {
   border: none;
   background: white;
   cursor: pointer;
+  margin-left: 1rem;
 }
 
 body {
   background: #383352;
-  font-family: 'Raleway', Verdana sans-serif;
+  font-family: 'Raleway', Verdana, sans-serif;
   font-size: 10px;
   transition: all 1s ease;
 
@@ -97,8 +98,11 @@ body {
   }
 
   & p {
-    font-size: 18px;
+    font-size: 2rem;
     transition: opacity 0.3s ease;
+    top: -1.3rem;
+    display: block;
+    position: absolute;
   }
 
   & .container {
@@ -156,6 +160,7 @@ h1:hover {
 }
 
 textarea {
+  font-family: 'Raleway', Verdana, sans-serif;
   width: 100%;
   height: 200px;
   padding: 2rem;
